; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22066.c_check_for_AAAA.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22066.c_check_for_AAAA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"too long\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"41414141\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_for_AAAA(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @strstr(i8* %5, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i8* @strrchr(i8* %9, i8 signext 58)
  %11 = getelementptr inbounds i8, i8* %10, i64 -8
  store i8* %11, i8** %4, align 8
  br label %20

12:                                               ; preds = %1
  %13 = load i8*, i8** %2, align 8
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %13, i64 %16
  %18 = getelementptr inbounds i8, i8* %17, i64 -1
  %19 = getelementptr inbounds i8, i8* %18, i64 -8
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %12, %8
  %21 = load i8*, i8** %4, align 8
  %22 = call i64 @strstr(i8* %21, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @strstr(i8*, i8*) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
